ROO-357: workdir jars not removed on addon uninstall on Windows ROO-420: Roo fails to start on windows with an installed addon